# task-4-cli

./: __init__.py  demofile.txt  main.py  main_test.py  task_3.py  test_task_3.py
__pycache__/: test_task_3.cpython-310-pytest-7.1.3.pyc.10288
packaging_tutorial/: README.md  pyproject.toml
packaging_tutorial/src/task_number_4/: __init__.py  collect_framework.py  task_4.py
packaging_tutorial/test/: test_collect_framework.py
task_number_3/: __init__.py  collect_framework.py  task_3.py
task_number_4/: __init__.py  collect_framework.py
test/: test_collect_framework.py  test_task_3.py
