[project]
name = "task_number_4"
version = "3.10.4"

authors = [
  { name="Barvynska", email="alexbarvynka@gmail.com" },
]

description = "A small example package"
readme = "README.md"
requires-python = ">=3.10.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"